new design and listing of Cyberdev

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"atomAstronaut.png":["Assets/atomAstronaut.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
