Something is brewing

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/stargatepromo.gif":["assets/stargatepromo.gif"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/osmosis_promo.gif":["assets/osmosis_promo.gif"],"assets/stargatepromo.gif":["assets/stargatepromo.gif"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
