--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/osmosis_promo.gif":["assets/osmosis_promo.gif"],"assets/stargatepromo.gif":["assets/stargatepromo.gif"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/secretSwapIcon.gif":["assets/secretSwapIcon.gif"],"assets/secretSwapPromo.png":["assets/secretSwapPromo.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
