--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/secretSwapIcon.gif":["assets/secretSwapIcon.gif"],"assets/secretSwapPromo.png":["assets/secretSwapPromo.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{".env":[".env"],"assets/secretSwapIcon.gif":["assets/secretSwapIcon.gif"],"assets/secretSwapPromo.png":["assets/secretSwapPromo.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
