--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/secretSwapIcon.gif":["assets/secretSwapIcon.gif"],"assets/secretSwapPromo.png":["assets/secretSwapPromo.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/osmosis.png":["assets/osmosis.png"],"assets/secretSwapIcon.gif":["assets/secretSwapIcon.gif"],"assets/secretSwapPromo.png":["assets/secretSwapPromo.png"],"assets/stashh.png":["assets/stashh.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
