Revert "test-new-template"
This reverts commit c6409459201a587591a387c8f88e19ec878c8110.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "new_cosmos_cap",
-    "short_name": "new_cosmos_cap",
+    "name": "cosmos_cap",
+    "short_name": "cosmos_cap",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
